--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,12 @@ android:
     # The SDK version used to compile your project
     - android-26
     
+licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+
+
 before_install:
  - chmod +x gradlew
  - yes | sdkmanager "platforms;android-26"
