--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,15 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-22
-    - sys-img-armeabi-v7a-android-25
-    - sys-img-armeabi-v7a-android-26
+    - sys-img-armeabi-v7a-addon-google_apis-google-22
+    - sys-img-armeabi-v7a-addon-google_apis-google-25
+    - sys-img-armeabi-v7a-addon-google_apis-google-26
 jdk: oraclejdk8
 os:
   - linux
 before_script:
   - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
   
